--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "4a6d3982",
+   "id": "f6cd9c96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a1108257",
+   "id": "616bb85f",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "715d9e7b",
+   "id": "9a6edea1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b016a94d",
+   "id": "299d8fe8",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "b044d6a0",
+   "id": "3bf987af",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "95f2e217",
+   "id": "d66f7a38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "b9af8ba7",
+   "id": "7d644cc5",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "c1779819",
+   "id": "86a349aa",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "21be8e6b",
+   "id": "d3818af5",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "be8e7ee5",
+   "id": "3a7f62d1",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "ae08cb5b",
+   "id": "b0f5812d",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "70dd2d4c",
+   "id": "04c2213d",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "98c60fc5",
+   "id": "03d523f9",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "f7b5aaf4",
+   "id": "b9642f72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "1775ecde",
+   "id": "3b93f40b",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6da68c98",
+   "id": "efd4dc50",
    "metadata": {},
    "source": [
     "# Types de données en Python"
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1056882d",
+   "id": "7be840cf",
    "metadata": {},
    "source": [
     "## Listes"
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "fc834c61",
+   "id": "018e7bba",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "b216c7ef",
+   "id": "909fc06a",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0146907",
+   "id": "9e30f59c",
    "metadata": {},
    "source": [
     "## Tuples"
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "6c7643e1",
+   "id": "0190608b",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "1394358f",
+   "id": "a03dea2c",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "9f94af5c",
+   "id": "5c1353ab",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2bc7aa6",
+   "id": "ce64e4f5",
    "metadata": {},
    "source": [
     "## Dictionnaires"
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "c0608814",
+   "id": "824b2779",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "c4df115f",
+   "id": "cfbf6888",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "ee42dd70",
+   "id": "4f620b24",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "d43b82de",
+   "id": "fd0a6ec4",
    "metadata": {},
    "outputs": [
     {
@@ -547,54 +547,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "aca09454",
+   "execution_count": 87,
+   "id": "f97ab4ab",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{}\n",
-      "{'C': 1}\n",
-      "{'C': 1, 'a': 1}\n",
-      "{'C': 1, 'a': 1, 'n': 1}\n",
-      "{'C': 1, 'a': 1, 'n': 1, 'd': 1}\n",
-      "{'C': 1, 'a': 1, 'n': 1, 'd': 1, 'i': 1}\n",
-      "{'C': 1, 'a': 1, 'n': 1, 'd': 2, 'i': 1}\n",
-      "{'C': 1, 'a': 2, 'n': 1, 'd': 2, 'i': 1}\n",
-      "{'C': 1, 'a': 2, 'n': 1, 'd': 2, 'i': 1, 't': 1}\n",
-      "{'C': 1, 'a': 2, 'n': 1, 'd': 2, 'i': 1, 't': 1, 'u': 1}\n",
-      "{'C': 1, 'a': 2, 'n': 1, 'd': 2, 'i': 1, 't': 1, 'u': 1, 'r': 1}\n",
-      "{'C': 1, 'a': 2, 'n': 1, 'd': 2, 'i': 1, 't': 1, 'u': 1, 'r': 1, 'e': 1}\n",
-      "{'C': 1, 'a': 2, 'n': 1, 'd': 2, 'i': 1, 't': 1, 'u': 1, 'r': 1, 'e': 1, ' ': 1}\n",
-      "{'C': 1, 'a': 2, 'n': 1, 'd': 2, 'i': 1, 't': 1, 'u': 1, 'r': 1, 'e': 1, ' ': 1, 's': 1}\n",
-      "{'C': 1, 'a': 2, 'n': 1, 'd': 2, 'i': 1, 't': 1, 'u': 1, 'r': 1, 'e': 1, ' ': 1, 's': 1, 'p': 1}\n",
-      "{'C': 1, 'a': 2, 'n': 1, 'd': 2, 'i': 1, 't': 1, 'u': 1, 'r': 1, 'e': 1, ' ': 1, 's': 1, 'p': 1, 'o': 1}\n",
-      "{'C': 1, 'a': 2, 'n': 2, 'd': 2, 'i': 1, 't': 1, 'u': 1, 'r': 1, 'e': 1, ' ': 1, 's': 1, 'p': 1, 'o': 1}\n",
-      "{'C': 1, 'a': 2, 'n': 2, 'd': 2, 'i': 1, 't': 2, 'u': 1, 'r': 1, 'e': 1, ' ': 1, 's': 1, 'p': 1, 'o': 1}\n",
-      "{'C': 1, 'a': 3, 'n': 2, 'd': 2, 'i': 1, 't': 2, 'u': 1, 'r': 1, 'e': 1, ' ': 1, 's': 1, 'p': 1, 'o': 1}\n",
-      "{'C': 1, 'a': 3, 'n': 3, 'd': 2, 'i': 1, 't': 2, 'u': 1, 'r': 1, 'e': 1, ' ': 1, 's': 1, 'p': 1, 'o': 1}\n",
-      "{'C': 1, 'a': 3, 'n': 3, 'd': 2, 'i': 1, 't': 2, 'u': 1, 'r': 1, 'e': 2, ' ': 1, 's': 1, 'p': 1, 'o': 1}\n",
-      "{'C': 1, 'a': 3, 'n': 3, 'd': 2, 'i': 1, 't': 2, 'u': 1, 'r': 1, 'e': 3, ' ': 1, 's': 1, 'p': 1, 'o': 1}\n",
-      "{'C': 1, 'a': 3, 'n': 3, 'd': 2, 'i': 1, 't': 2, 'u': 1, 'r': 1, 'e': 3, ' ': 2, 's': 1, 'p': 1, 'o': 1}\n",
-      "{'C': 1, 'a': 3, 'n': 3, 'd': 3, 'i': 1, 't': 2, 'u': 1, 'r': 1, 'e': 3, ' ': 2, 's': 1, 'p': 1, 'o': 1}\n",
-      "{'C': 1, 'a': 3, 'n': 3, 'd': 3, 'i': 1, 't': 2, 'u': 1, 'r': 1, 'e': 4, ' ': 2, 's': 1, 'p': 1, 'o': 1}\n",
-      "{'C': 1, 'a': 3, 'n': 3, 'd': 3, 'i': 1, 't': 2, 'u': 1, 'r': 1, 'e': 4, ' ': 3, 's': 1, 'p': 1, 'o': 1}\n",
-      "{'C': 1, 'a': 3, 'n': 3, 'd': 3, 'i': 1, 't': 2, 'u': 1, 'r': 1, 'e': 4, ' ': 3, 's': 1, 'p': 1, 'o': 1, 'M': 1}\n",
-      "{'C': 1, 'a': 4, 'n': 3, 'd': 3, 'i': 1, 't': 2, 'u': 1, 'r': 1, 'e': 4, ' ': 3, 's': 1, 'p': 1, 'o': 1, 'M': 1}\n",
-      "{'C': 1, 'a': 4, 'n': 3, 'd': 3, 'i': 1, 't': 3, 'u': 1, 'r': 1, 'e': 4, ' ': 3, 's': 1, 'p': 1, 'o': 1, 'M': 1}\n",
-      "{'C': 1, 'a': 4, 'n': 3, 'd': 3, 'i': 1, 't': 4, 'u': 1, 'r': 1, 'e': 4, ' ': 3, 's': 1, 'p': 1, 'o': 1, 'M': 1}\n",
-      "{'C': 1, 'a': 4, 'n': 3, 'd': 3, 'i': 1, 't': 4, 'u': 1, 'r': 1, 'e': 4, ' ': 3, 's': 1, 'p': 1, 'o': 1, 'M': 1, 'h': 1}\n",
-      "{'C': 1, 'a': 4, 'n': 3, 'd': 3, 'i': 2, 't': 4, 'u': 1, 'r': 1, 'e': 4, ' ': 3, 's': 1, 'p': 1, 'o': 1, 'M': 1, 'h': 1}\n",
-      "{'C': 1, 'a': 4, 'n': 3, 'd': 3, 'i': 2, 't': 4, 'u': 1, 'r': 1, 'e': 5, ' ': 3, 's': 1, 'p': 1, 'o': 1, 'M': 1, 'h': 1}\n",
-      "{'C': 1, 'a': 4, 'n': 3, 'd': 3, 'i': 2, 't': 4, 'u': 2, 'r': 1, 'e': 5, ' ': 3, 's': 1, 'p': 1, 'o': 1, 'M': 1, 'h': 1}\n",
-      "{'C': 1, 'a': 4, 'n': 3, 'd': 3, 'i': 2, 't': 4, 'u': 2, 'r': 1, 'e': 5, ' ': 4, 's': 1, 'p': 1, 'o': 1, 'M': 1, 'h': 1}\n",
-      "{'C': 1, 'a': 4, 'n': 3, 'd': 3, 'i': 2, 't': 4, 'u': 2, 'r': 1, 'e': 5, ' ': 4, 's': 1, 'p': 1, 'o': 1, 'M': 1, 'h': 1, 'F': 1}\n",
-      "{'C': 1, 'a': 5, 'n': 3, 'd': 3, 'i': 2, 't': 4, 'u': 2, 'r': 1, 'e': 5, ' ': 4, 's': 1, 'p': 1, 'o': 1, 'M': 1, 'h': 1, 'F': 1}\n",
-      "{'C': 1, 'a': 5, 'n': 3, 'd': 3, 'i': 2, 't': 4, 'u': 2, 'r': 1, 'e': 5, ' ': 4, 's': 1, 'p': 1, 'o': 1, 'M': 1, 'h': 1, 'F': 1, 'l': 1}\n",
-      "{'C': 1, 'a': 5, 'n': 3, 'd': 3, 'i': 2, 't': 4, 'u': 2, 'r': 1, 'e': 5, ' ': 4, 's': 1, 'p': 1, 'o': 1, 'M': 1, 'h': 1, 'F': 1, 'l': 1, 'c': 1}\n",
-      "{'C': 1, 'a': 5, 'n': 3, 'd': 3, 'i': 2, 't': 4, 'u': 2, 'r': 1, 'e': 6, ' ': 4, 's': 1, 'p': 1, 'o': 1, 'M': 1, 'h': 1, 'F': 1, 'l': 1, 'c': 1}\n"
+      "La lettre C apparait 1 fois\n",
+      "La lettre a apparait 5 fois\n",
+      "La lettre n apparait 3 fois\n",
+      "La lettre d apparait 3 fois\n",
+      "La lettre i apparait 2 fois\n",
+      "La lettre t apparait 4 fois\n",
+      "La lettre u apparait 2 fois\n",
+      "La lettre r apparait 1 fois\n",
+      "La lettre e apparait 6 fois\n",
+      "La lettre   apparait 4 fois\n",
+      "La lettre s apparait 1 fois\n",
+      "La lettre p apparait 1 fois\n",
+      "La lettre o apparait 1 fois\n",
+      "La lettre M apparait 1 fois\n",
+      "La lettre h apparait 1 fois\n",
+      "La lettre F apparait 1 fois\n",
+      "La lettre l apparait 1 fois\n",
+      "La lettre c apparait 1 fois\n",
+      "La lettre C apparait 1 fois\n",
+      "La lettre a apparait 5 fois\n",
+      "La lettre n apparait 3 fois\n",
+      "La lettre d apparait 3 fois\n",
+      "La lettre i apparait 2 fois\n",
+      "La lettre t apparait 4 fois\n",
+      "La lettre u apparait 2 fois\n",
+      "La lettre r apparait 1 fois\n",
+      "La lettre e apparait 6 fois\n",
+      "La lettre   apparait 4 fois\n",
+      "La lettre s apparait 1 fois\n",
+      "La lettre p apparait 1 fois\n",
+      "La lettre o apparait 1 fois\n",
+      "La lettre M apparait 1 fois\n",
+      "La lettre h apparait 1 fois\n",
+      "La lettre F apparait 1 fois\n",
+      "La lettre l apparait 1 fois\n",
+      "La lettre c apparait 1 fois\n"
      ]
     }
    ],
@@ -619,20 +615,27 @@
     "def solution_avec_dict(sujet):\n",
     "    res = {}\n",
     "    for letter in sujet:\n",
-    "        print(res)\n",
+    "        # print(res)\n",
     "        if letter in res:\n",
     "            res[letter] = res[letter] + 1\n",
     "        else:\n",
     "            res[letter] = 1\n",
     "    return res\n",
     "\n",
-    "print(solution_avec_dict(sujet))"
+    "compteur = solution_avec_dict(sujet)\n",
+    "for key in compteur:\n",
+    "    print(f'La lettre {key} apparait {compteur[key]} fois')\n",
+    "\n",
+    "\n",
+    "    \n",
+    "for key, valeur in compteur.items():\n",
+    "    print(f'La lettre {key} apparait {valeur} fois')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "f178bd4b",
+   "execution_count": 84,
+   "id": "0737b067",
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +644,7 @@
        "5"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,8 +655,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9ccd3922",
+   "execution_count": 82,
+   "id": "0eb9f799",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,6 +664,14 @@
     "# complexité linéaire o(n)\n",
     "# complexité polynomiale o(n**3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24989f59",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
