--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f6cd9c96",
+   "id": "7ae5ac4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "616bb85f",
+   "id": "4b2f987a",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9a6edea1",
+   "id": "c0187a9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "299d8fe8",
+   "id": "5c7d2e6e",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "3bf987af",
+   "id": "d47136eb",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "d66f7a38",
+   "id": "86c49676",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "7d644cc5",
+   "id": "c6f5104f",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "86a349aa",
+   "id": "863b5c0f",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "d3818af5",
+   "id": "06ab705a",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "3a7f62d1",
+   "id": "74df2e1a",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "b0f5812d",
+   "id": "18624028",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "04c2213d",
+   "id": "729eeba9",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "03d523f9",
+   "id": "8e991ef8",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "b9642f72",
+   "id": "6d2cea83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "3b93f40b",
+   "id": "c6d83360",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efd4dc50",
+   "id": "28565865",
    "metadata": {},
    "source": [
     "# Types de données en Python"
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7be840cf",
+   "id": "2cf516a9",
    "metadata": {},
    "source": [
     "## Listes"
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "018e7bba",
+   "id": "166a1335",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "909fc06a",
+   "id": "6b7eef05",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e30f59c",
+   "id": "6ea3c538",
    "metadata": {},
    "source": [
     "## Tuples"
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "0190608b",
+   "id": "c4ba0e72",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "a03dea2c",
+   "id": "bc5a5d47",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "5c1353ab",
+   "id": "754137a4",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce64e4f5",
+   "id": "e6f0e4c6",
    "metadata": {},
    "source": [
     "## Dictionnaires"
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "824b2779",
+   "id": "49fb28dc",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "cfbf6888",
+   "id": "f843833c",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "4f620b24",
+   "id": "a66a709d",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "fd0a6ec4",
+   "id": "0cc55c11",
    "metadata": {},
    "outputs": [
     {
@@ -547,8 +547,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "id": "f97ab4ab",
+   "execution_count": 88,
+   "id": "871494da",
    "metadata": {},
    "outputs": [
     {
@@ -573,6 +573,7 @@
       "La lettre F apparait 1 fois\n",
       "La lettre l apparait 1 fois\n",
       "La lettre c apparait 1 fois\n",
+      "****\n",
       "La lettre C apparait 1 fois\n",
       "La lettre a apparait 5 fois\n",
       "La lettre n apparait 3 fois\n",
@@ -626,7 +627,7 @@
     "for key in compteur:\n",
     "    print(f'La lettre {key} apparait {compteur[key]} fois')\n",
     "\n",
-    "\n",
+    "print(\"****\")\n",
     "    \n",
     "for key, valeur in compteur.items():\n",
     "    print(f'La lettre {key} apparait {valeur} fois')"
@@ -635,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "0737b067",
+   "id": "a6c0f6f7",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "0eb9f799",
+   "id": "1e8a767f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,8 +668,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 89,
+   "id": "a646f995",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['C', 'a', 'n', 'd', 'i', 't', 'u', 'r', 'e', ' ', 's', 'p', 'o', 'M', 'h', 'F', 'l', 'c'])"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compteur.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "2eee74ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values([1, 5, 3, 3, 2, 4, 2, 1, 6, 4, 1, 1, 1, 1, 1, 1, 1, 1])"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compteur.values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "15ff293c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('C', 1), ('a', 5), ('n', 3), ('d', 3), ('i', 2), ('t', 4), ('u', 2), ('r', 1), ('e', 6), (' ', 4), ('s', 1), ('p', 1), ('o', 1), ('M', 1), ('h', 1), ('F', 1), ('l', 1), ('c', 1)])"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compteur.items()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "24989f59",
+   "id": "ad491ab1",
    "metadata": {},
    "outputs": [],
    "source": []
