--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "501b6e42",
+   "id": "491e8e87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "6ccba1a0",
+   "id": "a5afde8b",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "d01d231b",
+   "id": "14c8498a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "dbcd8dae",
+   "id": "9498dc67",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f49e672e",
+   "id": "cb02b29d",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "c80da37e",
+   "id": "e636cdb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "0efe3c88",
+   "id": "009f2e38",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "0ff238a6",
+   "id": "577add89",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "3419bac3",
+   "id": "0e770934",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "8bd809e2",
+   "id": "f09601aa",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "67841635",
+   "id": "6e105d67",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "072979e7",
+   "id": "0612f547",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "fe8fd1e8",
+   "id": "9464bc9e",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "4bb13350",
+   "id": "56a8da5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "8ce284a5",
+   "id": "90d5f3e4",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83c54cc4",
+   "id": "7cb763f0",
    "metadata": {},
    "source": [
     "# Types de données en Python"
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce179993",
+   "id": "f4f1396a",
    "metadata": {},
    "source": [
     "## Listes"
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "24972f5d",
+   "id": "08be8f66",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "865b9d09",
+   "id": "a4ce9da2",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f687470",
+   "id": "93919ccb",
    "metadata": {},
    "source": [
     "## Tuples"
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "ffcdb03d",
+   "id": "935bd293",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "f24c2c97",
+   "id": "72fa0d14",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "0908a068",
+   "id": "bcba69a9",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83a7a617",
+   "id": "eaca139c",
    "metadata": {},
    "source": [
     "## Dictionnaires"
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "574f23c1",
+   "id": "fbbb81c6",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "7c6b06df",
+   "id": "4530bd1c",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "07d9c07e",
+   "id": "8c6c83ac",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "09de3604",
+   "id": "9493282f",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "b9961c2d",
+   "id": "86f8d754",
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "be3380b9",
+   "id": "c5676bc5",
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "2c184fc6",
+   "id": "7e182c67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "fb2d5940",
+   "id": "f0efbcd1",
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "c894fd41",
+   "id": "13304356",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "e38fd494",
+   "id": "8fbe7db3",
    "metadata": {},
    "outputs": [
     {
@@ -731,8 +731,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 94,
+   "id": "1361a957",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'categories': [], 'created_at': '2020-01-05 13:42:29.296379', 'icon_url': 'https://assets.chucknorris.host/img/avatar/chuck-norris.png', 'id': 'pjibUB2LTD-5NvdAhnlYqg', 'updated_at': '2020-01-05 13:42:29.296379', 'url': 'https://api.chucknorris.io/jokes/pjibUB2LTD-5NvdAhnlYqg', 'value': 'Chuck Norris can touch MC Hammer...'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "r = requests.get(\"https://api.chucknorris.io/jokes/random\")\n",
+    "print(r.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6cf945a4",
+   "id": "9b658819",
    "metadata": {},
    "outputs": [],
    "source": []
