--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "491e8e87",
+   "id": "c68aaa30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a5afde8b",
+   "id": "21334b23",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "14c8498a",
+   "id": "1c30844e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "9498dc67",
+   "id": "74f84bc3",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "cb02b29d",
+   "id": "4a83f87d",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "e636cdb6",
+   "id": "d1075642",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "009f2e38",
+   "id": "55d30258",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "577add89",
+   "id": "176588ad",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "0e770934",
+   "id": "d8097c1e",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "f09601aa",
+   "id": "9fdddf32",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "6e105d67",
+   "id": "8e973684",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "0612f547",
+   "id": "a4f6e5ee",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "9464bc9e",
+   "id": "f9147684",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "56a8da5c",
+   "id": "07ccb463",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "90d5f3e4",
+   "id": "d0ed1db0",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cb763f0",
+   "id": "754f31da",
    "metadata": {},
    "source": [
     "# Types de données en Python"
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4f1396a",
+   "id": "41ed2677",
    "metadata": {},
    "source": [
     "## Listes"
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "08be8f66",
+   "id": "1272b59d",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "a4ce9da2",
+   "id": "cbf1c9d8",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93919ccb",
+   "id": "4203096e",
    "metadata": {},
    "source": [
     "## Tuples"
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "935bd293",
+   "id": "1500e478",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "72fa0d14",
+   "id": "4f0c0d36",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "bcba69a9",
+   "id": "e6d569f9",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaca139c",
+   "id": "f53ea070",
    "metadata": {},
    "source": [
     "## Dictionnaires"
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "fbbb81c6",
+   "id": "0bf045bf",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "4530bd1c",
+   "id": "e5d7232e",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "8c6c83ac",
+   "id": "191a4615",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "9493282f",
+   "id": "0d54b181",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "86f8d754",
+   "id": "c14fdda0",
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "c5676bc5",
+   "id": "4f077eb2",
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "7e182c67",
+   "id": "55488aec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "f0efbcd1",
+   "id": "95afe0d6",
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "13304356",
+   "id": "3363b641",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "8fbe7db3",
+   "id": "c9ff7ea4",
    "metadata": {},
    "outputs": [
     {
@@ -731,29 +731,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "id": "1361a957",
+   "execution_count": 95,
+   "id": "abbb4404",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'categories': [], 'created_at': '2020-01-05 13:42:29.296379', 'icon_url': 'https://assets.chucknorris.host/img/avatar/chuck-norris.png', 'id': 'pjibUB2LTD-5NvdAhnlYqg', 'updated_at': '2020-01-05 13:42:29.296379', 'url': 'https://api.chucknorris.io/jokes/pjibUB2LTD-5NvdAhnlYqg', 'value': 'Chuck Norris can touch MC Hammer...'}\n"
+      "{'categories': [], 'created_at': '2020-01-05 13:42:22.089095', 'icon_url': 'https://assets.chucknorris.host/img/avatar/chuck-norris.png', 'id': '_U4_kOBtR3So-8nwdMA7Pg', 'updated_at': '2020-01-05 13:42:22.089095', 'url': 'https://api.chucknorris.io/jokes/_U4_kOBtR3So-8nwdMA7Pg', 'value': 'Chuck Norris has to visit the dentist twice a month in order to remove the jawbreakers stuck between his teeth.'}\n"
      ]
     }
    ],
    "source": [
     "import requests\n",
     "\n",
-    "r = requests.get(\"https://api.chucknorris.io/jokes/random\")\n",
+    "r = requests.get(\"https://run.mocky.io/v3/92595719-bc1b-451b-9207-0a3420fa32b8\")\n",
     "print(r.json())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b658819",
+   "id": "8588076c",
    "metadata": {},
    "outputs": [],
    "source": []
